--- a/ojs/plugins/importexport/pubIds/locale/en_US/locale.xml
+++ b/ojs/plugins/importexport/pubIds/locale/en_US/locale.xml
@@ -2,7 +2,7 @@
 <!DOCTYPE locale SYSTEM "../../../../../lib/pkp/dtd/locale.dtd">
 
 <!--
-  * @file pplugins/importexport/pubIds/locale/en_US/locale.xml
+  * @file plugins/importexport/pubIds/locale/en_US/locale.xml
   *
   * Copyright (c) 2003-2012 John Willinsky
   * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
@@ -47,7 +47,7 @@ Commands:
 	<message key="plugins.importexport.pubIds.import.error.unknownObjectType">An unknown object type "{$pubObjectType}" was specified in the "pubObjectType" attribute of the element with the value "{$pubId}".</message>
 	<message key="plugins.importexport.pubIds.import.error.unknownObject">The object "{$pubObjectType}" with ID = {$pubObjectId} specified in the element with the value "{$pubId}" deos not exist for this journal.</message>
 	<message key="plugins.importexport.pubIds.import.error.pubIdExists">Public identifier of the type "{$pubIdType}" for the object {$pubObjectType} with ID = {$pubObjectId} already exists.</message>
-	<message key="plugins.importexport.pubIds.import.error.duplicatePubId">The public identifeir "{$pubId}" is already in use by another object.</message>
+	<message key="plugins.importexport.pubIds.import.error.duplicatePubId">The public identifier "{$pubId}" is already in use by another object.</message>
 	<message key="plugins.importexport.pubIds.import.error.unknownPubId">Your import file contains a public identifier type "{$pubIdType}" that no pubId plugin can handle. Please install and/or activate the corresponding pubId plugin before trying to import this dataset.</message>
 
 
