--- a/ops/locale/de_DE/locale.xml
+++ b/ops/locale/de_DE/locale.xml
@@ -330,7 +330,7 @@
 
 	<!-- Leser/innenkommentare -->
 	<message key="comments.commentsOnArticle">Kommentare zu diesem Artikel</message>
-	<message key="comments.authenticated">{$userName} </message>
+	<message key="comments.authenticated"><![CDATA[von <a href="{$publicProfileUrl}" target="_parent">{$userName}</a>]]></message>
 
 	<!-- Verwaltung der Website -->
 
@@ -787,7 +787,7 @@ Tragen Sie zur Wiederherstellung des Passwortes unten Ihre E-Mail-Adresse ein. E
 
 	<!-- Einschubseite für Fahnen, die weder PDF noch HTML sind -->
 	<message key="article.nonpdf.title">Artikel herunterladen</message>
-	<message key="article.nonpdf.note"><![CDATA[Die gewählte Datei sollte automatisch geladen werden. Falls nicht, klicken Sie auf den nachstehenden Link. Beachten Sie bitte, dass die Datei zur Wiedergabe ein spezielles Programm oder ein Plug-In benötigen kann.<br /><br />Falls die Datei nicht automatisch geladen wird <a href="{$pdfUrl}">hier klicken</a>.]]></message>
+	<message key="article.nonpdf.note"><![CDATA[Die gewählte Datei sollte automatisch geladen werden. Falls nicht, klicken Sie auf den nachstehenden Link. Beachten Sie bitte, dass die Datei zur Wiedergabe ein spezielles Programm oder ein Plug-In benötigen kann.<br /><br />Falls die Datei nicht automatisch geladen wird, <a href="{$url}">hier klicken</a>.]]></message>
 
 	<!-- Index: Site -->
 	<message key="site.journalsHosted">Zeitschriften auf dieser Seite</message>
@@ -1124,24 +1124,24 @@ Die Prüfung kann bei Such-URLs, die Formularausfüllung verlangen, fehlschlagen
 	<message key="notification.mailListDescription">Geben Sie Ihre E-Mail-Adresse ein, wenn Sie über neue Inhalte in dieser Zeitschrift informiert werden wollen</message>
 	<message key="notification.notificationsPublicDescription"><![CDATA[Auf dieser Seite finden Sie Updates wie neue Ausgaben oder Ankündigungen. Sie können diese Benachrichtigungen als RSS-Feed abonnieren (indem Sie auf die Abbildungen rechts klicken) oder <a href="{$emailUrl}">via E-Mail.</a>]]></message>
 
-	<message key="notification.type.articleSubmitted">Ein neuer Beitrag, "{$param}", wurde eingereicht.</message>
-	<message key="notification.type.copyeditComment">Ein Lektor/eine Lektorin hat einen Kommentar zu "{$param}" hinterlassen.</message>
+	<message key="notification.type.articleSubmitted">Ein neuer Beitrag, "{$title}", wurde eingereicht.</message>
+	<message key="notification.type.copyeditComment">Ein Lektor/eine Lektorin hat einen Kommentar zu "{$title}" hinterlassen.</message>
 	<message key="notification.type.editing">Redaktionelle Ereignisse</message>
-	<message key="notification.type.editorDecisionComment">Ein Kommentar zur Entscheidung des Redakteur/der Redaktuerin über "{$param}" wurde hinterlassen.</message>
-	<message key="notification.type.galleyModified">Für "{$param}" wurde eine Korrekturfahne geändert.</message>
+	<message key="notification.type.editorDecisionComment">Ein Kommentar zur Entscheidung des Redakteur/der Redaktuerin über "{$title}" wurde hinterlassen.</message>
+	<message key="notification.type.galleyModified">Für "{$title}" wurde eine Korrekturfahne geändert.</message>
 	<message key="notification.type.issuePublished">Eine Ausgabe wurde veröffentlicht.</message>
-	<message key="notification.type.layoutComment">Zum Layout von "{$param}'s" wurde ein Kommentar hinterlassen.</message>
-	<message key="notification.type.metadataModified">Die Metdadaten von "{$param}'s" wurden verändert.</message>
+	<message key="notification.type.layoutComment">Zum Layout von "{$title}'s" wurde ein Kommentar hinterlassen.</message>
+	<message key="notification.type.metadataModified">Die Metdadaten von "{$title}'s" wurden verändert.</message>
 	<message key="notification.type.newAnnouncement">Eine neue Ankündigung wurde erstellt.</message>
-	<message key="notification.type.proofreadComment">Ein/e Korrekturlektor/in hat einen Kommentar zu "{$param}" hinterlassen.</message>
-	<message key="notification.type.reviewerComment">Ein/e Gutachter/in hat "{$param} kommentiert.</message>
-	<message key="notification.type.reviewerFormComment">Für "{$param}" wurde ein Begutachtungsformular eingereicht.</message>
+	<message key="notification.type.proofreadComment">Ein/e Korrekturlektor/in hat einen Kommentar zu "{$title}" hinterlassen.</message>
+	<message key="notification.type.reviewerComment">Ein/e Gutachter/in hat "{$title} kommentiert.</message>
+	<message key="notification.type.reviewerFormComment">Für "{$title}" wurde ein Begutachtungsformular eingereicht.</message>
 	<message key="notification.type.reviewing">Begutachtungsereignisse</message>
 	<message key="notification.type.site">Site-Ereignisse</message>
-	<message key="notification.type.submissionComment">Ein/e Redakteur/in hat "{$param}" kommentiert.</message>
+	<message key="notification.type.submissionComment">Ein/e Redakteur/in hat "{$title}" kommentiert.</message>
 	<message key="notification.type.submissions">Einreichungsereignisse</message>
-	<message key="notification.type.suppFileModified">Die Zusatzdatei(en) zu "{$param}" wurden verändert.</message>
-	<message key="notification.type.userComment">Ein/e Leser/in hat "{$param}" kommentiert.</message>
+	<message key="notification.type.suppFileModified">Die Zusatzdatei(en) zu "{$title}" wurden verändert.</message>
+	<message key="notification.type.userComment">Ein/e Leser/in hat "{$title}" kommentiert.</message>
 
 	<!--
 	 *
