*7701* Changed Add Role label

--- a/pkp-lib/locale/en_US/grid.xml
+++ b/pkp-lib/locale/en_US/grid.xml
@@ -161,7 +161,7 @@
 
 	<!-- Roles -->
 	<message key="grid.roles.currentRoles">Current Roles</message>
-	<message key="grid.roles.add">Add Role</message>
+	<message key="grid.roles.add">Create New Role</message>
 	<message key="grid.roles.stageAssignment">Stage Assignment</message>
 
 	<!-- Users -->
